Agregue imagenes a la galeria, mas boton anterior  de ultima pagina y relatos de carreras, aun faltan cosas, como relato de ultima carrera y algunas fotos mas

--- a/LindaDamaProyectoActual/LindaDama/ProyectoLindaDama/index.html
+++ b/LindaDamaProyectoActual/LindaDama/ProyectoLindaDama/index.html
@@ -209,6 +209,11 @@
         <div class="history-storm"></div>
       </div>
 
+      <div class="btn-galery-five">
+        <button class="btn-following-5 back back-and-next">Anterior</button>
+        <button class="btn-following-5 back-and-next next-5">Siguiente</button>
+       </div> 
+    </div>
 
 
 
